---------------------------------------------------------------------------------------------------
Version: 1.0.8
  Bugfixes:
    - Fixed Tiberium Science missing from Angel's Industry's labs and reduced the odds of it happening for other tech overhauls in general
    - Fixed Tiberium growing on certain tile types that shouldn't have resources on them (water and the void of space)
    - Fixed Tiberium Seed Missiles not destroying other resources when they grow Tiberium ore
    - Fixed centrifuge recipes accounting for hidden, inaccessible recipes
---------------------------------------------------------------------------------------------------
Version: 1.0.7
  Bugfixes:
    - Fixed crash introduced in 1.0.6 due to missing step-up conversion
---------------------------------------------------------------------------------------------------
Version: 1.0.6
  Wiki:
    - Gave all the final categories an Icon in their list entry.
    - Added a Weaponry Category, with a couple entries
    - Fixed typos
    - Added a Liquid Seed category, in Tiberium Growth
  Features:
    - New Tiberium Ore icon (and all icons for all recipes which included the old Tiberium Ore icon)
    - Tiberium Power Plant now emits smoke while producing power and has a more fitting sound
  Changes:
    - Blossom Tree now blocks things from being built on it, except for our specific structures that go on nodes.
    - Tiberium is now significantly better at killing trees
    - Lowered selection priority of Tiberium Blossom Trees, so you can now mine things from underneath them
    - Updated outdated setting decriptions
    - Removed deprecated items, so they stop showing up as options for filters
    - Updated Liquid Tiberium Bomb to use the new atomic bomb explosion animation
    - Levels of Liquid Tiberium in Tiberium Power Plants now match the level of the connected pipes
  Bugfixes: